cli/tests/testdata/compat/test_runner/top_level_fail_esm.out
Uncaught error from ./compat/test_runner/top_level_fail_esm.mjs FAILED

 ERRORS 

./compat/test_runner/top_level_fail_esm.mjs (uncaught error)
error: AssertionError: Values are not strictly equal:


    [Diff] Actual / Expected


-   10
+   20

    Error.captureStackTrace(this, stackStartFn || stackStartFunction);
          ^
    at [WILDCARD]
This error was not caught from a test and caused the test runner to fail on the referenced module.
It most likely originated from a dangling promise, event/timeout handler or top-level code.

 FAILURES 

./compat/test_runner/top_level_fail_esm.mjs (uncaught error)

FAILED | 0 passed | 1 failed ([WILDCARD])

error: Test failed
